HB-4883: fixed pet card text flow on mobile

--- a/src/styles/modules/_m-pet-card.sass
+++ b/src/styles/modules/_m-pet-card.sass
@@ -44,6 +44,9 @@
     margin-left: $space-xs
     position: relative
     top: 0
+    white-space: nowrap
+    overflow: hidden
+    text-overflow: ellipsis
 
     +breakpoint(normal)
       margin-left: 0
